更换base64的依赖以优化本地mvn package